--- a/test/Mocking.DataGenerator.Tests/Mocking.DataGenerator.Tests.csproj
+++ b/test/Mocking.DataGenerator.Tests/Mocking.DataGenerator.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\MockDataGenerator\Mocking.DataGenerator.csproj" />
+    <ProjectReference Include="..\..\src\Mocking.DataGenerator\Mocking.DataGenerator.csproj" />
   </ItemGroup>
 
 </Project>
