--- a/src/Mocking.DataGenerator/Mocking.DataGenerator.csproj
+++ b/src/Mocking.DataGenerator/Mocking.DataGenerator.csproj
@@ -10,8 +10,8 @@
     <PackageProjectUrl>https://github.com/emrecaglar/MockDataGenerator</PackageProjectUrl>
     <PackageTags>mocking, unit-test, test, mock-data</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.1</Version>
-    <PackageReleaseNotes>Bug fixes, add nullable generators</PackageReleaseNotes>
+    <Version>1.3.0</Version>
+    <PackageReleaseNotes>Bug fixes</PackageReleaseNotes>
   </PropertyGroup>
 
 </Project>
