--- a/src/Mocking.DataGenerator/Mocking.DataGenerator.csproj
+++ b/src/Mocking.DataGenerator/Mocking.DataGenerator.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworks Condition="'$(LibraryFrameworks)'==''">net35;net40;net45;netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks Condition="'$(LibraryFrameworks)'!=''">$(LibraryFrameworks)</TargetFrameworks>
+    
     <AssemblyName>Mocking.DataGenerator</AssemblyName>
     <PackageId>MockDataGenerator</PackageId>
     <Authors>Emre ÇAĞLAR</Authors>
