--- a/src/Mocking.DataGenerator/Mocking.DataGenerator.csproj
+++ b/src/Mocking.DataGenerator/Mocking.DataGenerator.csproj
@@ -12,7 +12,7 @@
     <PackageTags>mocking, unit-test, test, mock-data</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.3.1</Version>
-    <PackageReleaseNotes>Bug fixes</PackageReleaseNotes>
+    <PackageReleaseNotes>Make Multitarget</PackageReleaseNotes>
   </PropertyGroup>
 
 </Project>
